    SCC while cutting new SCCs on given acceptance sets.  This is used
    by spot::generic_emptiness_check() when processing SCCs
    recursively, and makes it easier to write similar code in Python.

  - print_dot has a new option 'g', to hide edge labels.  This is
    helpful to display automata as "graphs", e.g., when illustrating
    algorithms that do not care about labels.

  - A new complement() function that return automata with unspecified
    acceptance condition.  The output can be alternating only if the
    input was alternating.

  - SVA's first_match operator can now be used in SERE formulas and
    that is supported by the ltl_to_tgba_fm() translation.  See
    doc/tl/tl.pdf for the semantics.  *WARNING* Because this adds a
    new operator, any code that switches over the spot::op type may
    need a new case for op::first_match.  Furthermore, the output of
    "randltl --psl" will be different from previous releases.

  - The parser for SERE learned to recognize the ##n and ##[i:j]
    operators from SVA.  So {##2 a ##0 b[+] ##1 c ##2 e} is another
    way to write {[*2];a:b[+];c;1;e}, and {a ##[i:j] b} is parsed as
    {a:{[*i..j];b}}.  The formula::sugar_delay() function implement
    this SVA operator in terms of the existing PSL operators.
    ##[+] and ##[*] are sugar for ##[1:$] and ##[0:$].

  - spot::relabel_apply() make it easier to reverse the effect
    of spot::relabel() or spot::relabel_bse() on formula.

  - The LTL simplifier learned the following optional rules:
    F(G(a | Fb)) = FGa | GFb  (if option "favor_event_univ")
    G(F(a | Gb)) = GFa | FGb   (if option "favor_event_univ")
    F(G(a & Fb) = FGa & GFb   (unless option "reduce_size_strictly")
    G(F(a & Gb)) = GFa & FGb  (unless option "reduce_size_strictly")

New in spot 2.7.4 (2019-04-27)

  Bugs fixed:

  - separate_sets_here() (and therefore autfilt --separate-sets) could
    loop infinitely on some inputs.

  - In some situation, ltl2tgba -G could abort with